Updated Spanish translation

--- a/po/es.po
+++ b/po/es.po
@@ -6,8 +6,8 @@ msgstr ""
 "Project-Id-Version: gnome-color-manager.master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager&keywords=I18N+L10N\n"
-"POT-Creation-Date: 2011-09-25 10:16+0000\n"
-"PO-Revision-Date: 2011-09-28 21:14+0200\n"
+"POT-Creation-Date: 2011-09-28 19:17+0000\n"
+"PO-Revision-Date: 2011-10-01 18:54+0200\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español; Castellano <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -39,7 +39,6 @@ msgid "Color Picker"
 msgstr "Selector de color"
 
 #: ../data/gcm-picker.desktop.in.h:2
-#| msgid "The attached colorimeter is not capable of reading a spot color."
 msgid "Use the color sensor to sample spot colors"
 msgstr "Use el sensor de color para muestrear los puntos de color"
 
@@ -70,7 +69,6 @@ msgid "A video card gamma table shows the curves loaded into the display"
 msgstr ""
 
 #: ../data/gcm-viewer.ui.h:5
-#| msgid "Create a profile for the device"
 msgid "Add a profile for the device"
 msgstr "Añadir un perfil para el dispositivo"
 
@@ -138,7 +136,6 @@ msgstr ""
 "usen los programas."
 
 #: ../data/gcm-viewer.ui.h:28
-#| msgid "Named color"
 msgid "Named Colors"
 msgstr "Colores con nombre"
 
@@ -150,15 +147,13 @@ msgstr ""
 
 #. The type of profile, e.g. display, scanner, etc.
 #: ../data/gcm-viewer.ui.h:31
-#| msgid "Profile type:"
 msgid "Profile type"
 msgstr "Tipo de perfil"
 
 #: ../data/gcm-viewer.ui.h:32
-#, fuzzy
 #| msgid "Remove a color profile for this device"
 msgid "Remove a profile from the device"
-msgstr "Quitar un perfil de color para este dispositivo"
+msgstr "Quitar un perfil del dispositivo"
 
 #: ../data/gcm-viewer.ui.h:33
 msgid "Response in"
@@ -185,10 +180,9 @@ msgid "This shows what an image would look like if saved with the profile"
 msgstr "Esto muestra cómo será una imagen si se guarda con el perfil"
 
 #: ../data/gcm-viewer.ui.h:39
-#, fuzzy
 #| msgid "RGB"
 msgid "To sRGB"
-msgstr "RGB"
+msgstr "A sRGB"
 
 #: ../data/gcm-viewer.ui.h:40
 msgid "VCGT"
@@ -590,14 +584,13 @@ msgid "Are you sure you want to cancel the calibration?"
 msgstr "¿Está seguro de que quiere cancelar la calibración?"
 
 #: ../src/gcm-calibrate-main.c:155
-#, fuzzy
 #| msgid "Device Calibration"
 msgid "Continue calibration"
-msgstr "Calibración del dispositivo"
+msgstr "Continuar la calibración"
 
 #: ../src/gcm-calibrate-main.c:159
 msgid "Cancel and close"
-msgstr ""
+msgstr "Cancelar y cerrar"
 
 #. TRANSLATORS: this is the sound description
 #: ../src/gcm-calibrate-main.c:290
@@ -606,38 +599,33 @@ msgstr "Perfilado completado"
 
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:440 ../src/gcm-calibrate-main.c:1753
-#, fuzzy
 #| msgid "Failed to calibrate device"
 msgid "Failed to calibrate"
-msgstr "Falló al calibrar el dispositivo"
+msgstr "Falló al calibrar"
 
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:695
-#, fuzzy
 #| msgid "Calibration error"
 msgid "Calibrate your camera"
-msgstr "Error de calibración"
+msgstr "Calibrar la cámara"
 
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:699
-#, fuzzy
 #| msgid "Set up display"
 msgid "Calibrate your display"
-msgstr "Configurar la pantalla"
+msgstr "Calibrar la pantalla"
 
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:703
-#, fuzzy
 #| msgid "Failed to calibrate printer"
 msgid "Calibrate your printer"
-msgstr "Falló al calibrar la impresora"
+msgstr "Calibrar la impresora"
 
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:707
-#, fuzzy
 #| msgid "Failed to calibrate device"
 msgid "Calibrate your device"
-msgstr "Falló al calibrar el dispositivo"
+msgstr "Calibrar el dispositivo"
 
 #. TRANSLATORS: this is the final intro page text
 #: ../src/gcm-calibrate-main.c:719
@@ -707,16 +695,14 @@ msgstr "Resumen"
 
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:821
-#, fuzzy
 #| msgid "Device Calibration"
 msgid "Performing calibration"
-msgstr "Calibración del dispositivo"
+msgstr "Realizando calibración"
 
 #: ../src/gcm-calibrate-main.c:834
-#, fuzzy
 #| msgid "Calibration error"
 msgid "Calibration is about to start"
-msgstr "Error de calibración"
+msgstr "La calibración va a empezar"
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:848
@@ -795,7 +781,7 @@ msgstr ""
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:907
 msgid "Check Settings"
-msgstr ""
+msgstr "Comprobar configuración"
 
 #: ../src/gcm-calibrate-main.c:958
 msgid "Calibration and profiling software is not installed."
@@ -810,7 +796,7 @@ msgstr ""
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:964
 msgid "More software is required!"
-msgstr ""
+msgstr "Se necesita más software"
 
 #: ../src/gcm-calibrate-main.c:973
 msgid "Install required software"
@@ -959,7 +945,7 @@ msgstr "Seleccionar un destino de calibración"
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:1214
 msgid "What target type do you have?"
-msgstr ""
+msgstr "¿Qué tipo de objetivo tiene?"
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1246
@@ -969,7 +955,7 @@ msgstr "Seleccionar objetivo"
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:1285
 msgid "Choose your display type"
-msgstr ""
+msgstr "Seleccionar su tipo de dispositivo"
 
 #. TRANSLATORS: this is intro page text
 #: ../src/gcm-calibrate-main.c:1292
@@ -995,7 +981,7 @@ msgstr "Proyector"
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1333
 msgid "Choose Display Type"
-msgstr ""
+msgstr "Seleccionar el tipo de dispositivo"
 
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:1371
@@ -1026,7 +1012,7 @@ msgstr "CIE D75"
 
 #: ../src/gcm-calibrate-main.c:1417
 msgid "Native (Already set manually)"
-msgstr ""
+msgstr "Nativo (a establecido manualmente)"
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1429
@@ -1035,7 +1021,6 @@ msgstr ""
 
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:1467
-#, fuzzy
 #| msgid "Please choose a profiling mode"
 msgid "Choose profiling mode"
 msgstr "Seleccionar un modo de perfilado"
@@ -1056,10 +1041,9 @@ msgstr "Modo de calibración"
 
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:1548
-#, fuzzy
 #| msgid "Recalibration required"
 msgid "Choose calibration quality"
-msgstr "Se necesita recalibrado"
+msgstr "Seleccionar la calidad de la calibración"
 
 #. TRANSLATORS: this is intro page text
 #: ../src/gcm-calibrate-main.c:1555
@@ -1160,10 +1144,9 @@ msgstr ""
 
 #. TRANSLATORS: this is saved in the profile
 #: ../src/gcm-calibrate-main.c:1991
-#, fuzzy
 #| msgid "Unknown model"
 msgid "Unknown serial"
-msgstr "Modelo desconocido"
+msgstr "Número de serie desconocido"
 
 #. TRANSLATORS: this is saved in the profile
 #: ../src/gcm-calibrate-main.c:1996
@@ -1189,22 +1172,20 @@ msgstr "Copyright (c)"
 
 #. TRANSLATORS: we can make this modal (stay on top of) another window
 #: ../src/gcm-calibrate-main.c:2122 ../src/gcm-picker.c:785
-#: ../src/gcm-viewer.c:1615
+#: ../src/gcm-viewer.c:1645
 msgid "Set the parent window to make this modal"
 msgstr "Establecer la ventana padre para hacerlo modal"
 
 #. TRANSLATORS: show just the one profile, rather than all
 #: ../src/gcm-calibrate-main.c:2125
-#, fuzzy
 #| msgid "Get the profiles for a specific device type"
 msgid "Set the specific device to calibrate"
-msgstr "Obtener los perfiles para un tipo de dispositivo específico"
+msgstr "Establecer el dispositivo específico que calibrar"
 
 #: ../src/gcm-calibrate-main.c:2163
-#, fuzzy
 #| msgid "No filename specified"
 msgid "No device was specified!"
-msgstr "No se especificó ningún nombre de archivo"
+msgstr "No se especificó ningún dispositivo"
 
 #. TRANSLATORS: this is when there is no profile for the device
 #: ../src/gcm-cell-renderer-profile-text.c:71
@@ -1250,23 +1231,21 @@ msgstr "Falló al analizar el archivo: %s"
 
 #. TRANSLATORS: message text
 #: ../src/gcm-import.c:157
-#, fuzzy, c-format
+#, c-format
 #| msgid "Profile Precision"
 msgid "Profile description: %s"
-msgstr "Precisión del perfil"
+msgstr "Descripción del perfil: %s"
 
 #. TRANSLATORS: message text
 #: ../src/gcm-import.c:167
-#, fuzzy
 #| msgid "Profile type:"
 msgid "Profile copyright:"
-msgstr "Tipo de perfil:"
+msgstr "Copyright del perfil:"
 
 #: ../src/gcm-import.c:179
-#, fuzzy
 #| msgid "ICC profile already installed"
 msgid "Color profile is already imported"
-msgstr "Perfil ICC ya instalado"
+msgstr "El perfil de color ya se ha importado"
 
 #: ../src/gcm-import.c:209
 msgid "ICC profile already installed system-wide"
@@ -1295,10 +1274,9 @@ msgstr "¿Importar el perfil de color ICC?"
 
 #. TRANSLATORS: the profile type
 #: ../src/gcm-import.c:237
-#, fuzzy
 #| msgid "Import ICC color profile?"
 msgid "Import color profile?"
-msgstr "¿Importar el perfil de color ICC?"
+msgstr "¿Importar el perfil de color?"
 
 #. TRANSLATORS: button text
 #: ../src/gcm-import.c:252 ../src/gcm-viewer.c:361
@@ -1306,10 +1284,9 @@ msgid "Import"
 msgstr "Importar"
 
 #: ../src/gcm-import.c:253
-#, fuzzy
 #| msgid "Details"
 msgid "Show Details"
-msgstr "Detalles"
+msgstr "Mostrar detalles"
 
 #: ../src/gcm-import.c:277
 msgid "Failed to import file"
@@ -1400,7 +1377,7 @@ msgstr "No hay ningún colorímetro acoplado."
 
 #: ../src/gcm-picker.c:375
 msgid "The sensor has no native driver."
-msgstr ""
+msgstr "El sensor no tiene un controlador nativo."
 
 #. TRANSLATORS: this is displayed the user has not got suitable hardware
 #: ../src/gcm-picker.c:384
@@ -1551,13 +1528,12 @@ msgstr "CMY"
 
 #: ../src/gcm-viewer.c:697
 msgid "Standard space"
-msgstr ""
+msgstr "Espacio estándar"
 
 #: ../src/gcm-viewer.c:698
-#, fuzzy
 #| msgid "Display setup"
 msgid "Display checksum"
-msgstr "Configuración de la pantalla"
+msgstr "Mostrar suma de verificación"
 
 #: ../src/gcm-viewer.c:699
 #, fuzzy
@@ -1585,7 +1561,7 @@ msgstr "Dispositivo de pantalla"
 
 #: ../src/gcm-viewer.c:703
 msgid "File checksum"
-msgstr ""
+msgstr "Suma de verificación del archivo"
 
 #: ../src/gcm-viewer.c:704
 msgid "Framework product"
@@ -1612,34 +1588,34 @@ msgid "Mapping qualifier"
 msgstr ""
 
 #. TRANSLATORS: if the device has a VCGT profile
-#: ../src/gcm-viewer.c:929
+#: ../src/gcm-viewer.c:959
 msgid "Yes"
 msgstr "Sí"
 
 #. TRANSLATORS: if the device has a VCGT profile
-#: ../src/gcm-viewer.c:932
+#: ../src/gcm-viewer.c:962
 msgid "No"
 msgstr "No"
 
 #. TRANSLATORS: this is the tooltip when the profile can be deleted
-#: ../src/gcm-viewer.c:1044
+#: ../src/gcm-viewer.c:1074
 msgid "Delete this profile"
 msgstr "Eliminar este perfil"
 
 #. TRANSLATORS: this is the tooltip when the profile cannot be deleted
-#: ../src/gcm-viewer.c:1047
+#: ../src/gcm-viewer.c:1077
 msgid "This profile cannot be deleted"
 msgstr "Este perfil no se puede eliminar"
 
 #. TRANSLATORS: show just the one profile, rather than all
-#: ../src/gcm-viewer.c:1618
+#: ../src/gcm-viewer.c:1648
 #, fuzzy
 #| msgid "Debug these specific modules"
 msgid "Set the specific profile to show"
 msgstr "Depurar específicamente estos módulos"
 
 #. TRANSLATORS: show just the one filename, rather than all
-#: ../src/gcm-viewer.c:1621
+#: ../src/gcm-viewer.c:1651
 #, fuzzy
 #| msgid "Debug these specific functions"
 msgid "Set the specific file to show"
@@ -1652,10 +1628,9 @@ msgstr "Ambiente:"
 
 #. This refers to the amount of ambient light on the sensor
 #: ../data/gcm-picker.ui.h:6
-#, fuzzy
 #| msgid "Colorspace:"
 msgid "Color Temperature:"
-msgstr "Espacio de color:"
+msgstr "Temperatura del color:"
 
 #. This is the title to a combobox that switches the RGB conversion between different colorspaces such as Adobe RGB and sRGB
 #: ../data/gcm-picker.ui.h:8
