Updated Swedish translation

--- a/po/sv.po
+++ b/po/sv.po
@@ -1,14 +1,14 @@
 # Swedish translation for gnome-color-manager.
-# Copyright (C) 2009, 2010 Free Software Foundation, Inc.
+# Copyright (C) 2009, 2010, 2011 Free Software Foundation, Inc.
 # This file is distributed under the same license as the gnome-color-manager package.
-# Daniel Nylander <po@danielnylander.se>, 2009, 2010.
+# Daniel Nylander <po@danielnylander.se>, 2009, 2010, 2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-09-19 07:35+0200\n"
-"PO-Revision-Date: 2011-09-19 07:50+0100\n"
+"POT-Creation-Date: 2011-10-08 18:44+0200\n"
+"PO-Revision-Date: 2011-10-08 19:01+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
@@ -44,12 +44,169 @@ msgid "Use the color sensor to sample spot colors"
 msgstr "Använd färgsensorn för att läsa in punktfärger"
 
 #: ../data/gcm-viewer.desktop.in.h:1
+#: ../data/gcm-viewer.ui.h:7
 msgid "Color Profile Viewer"
 msgstr "Färgprofilvisare"
 
 #: ../data/gcm-viewer.desktop.in.h:2
 msgid "Inspect and compare installed color profiles"
 msgstr "Inspektera och jämför installerade färgprofiler"
+
+#: ../data/gcm-viewer.ui.h:1
+msgid "3D Gamut"
+msgstr "3D Gamut"
+
+#: ../data/gcm-viewer.ui.h:2
+msgid "A CIE 1931 diagram shows a 2D representation of the profile gamut"
+msgstr "Ett CIE 1931-diagram visar en 2D-representation av profilens gamut"
+
+#: ../data/gcm-viewer.ui.h:3
+msgid "A tone reproduction curve is the mapping of scene luminance to display luminance"
+msgstr "En ton-reproduktionskurva är mappningen av scenens ljus till skärmens ljus"
+
+#: ../data/gcm-viewer.ui.h:4
+msgid "A video card gamma table shows the curves loaded into the display"
+msgstr "En gammatabell för grafikkort visar kurvorna som läses in i skärmen"
+
+#: ../data/gcm-viewer.ui.h:5
+msgid "Add a profile for the device"
+msgstr "Lägg till en profil för enheten"
+
+#: ../data/gcm-viewer.ui.h:6
+msgid "CIE 1931"
+msgstr "CIE 1931"
+
+#. The profile colorspace, e.g. RGB
+#: ../data/gcm-viewer.ui.h:9
+msgid "Colorspace"
+msgstr "Färgrymd"
+
+#. When the profile was created
+#: ../data/gcm-viewer.ui.h:11
+msgid "Created"
+msgstr "Skapad"
+
+#. The manufacturer of the profile
+#: ../data/gcm-viewer.ui.h:13
+msgid "Device manufacturer"
+msgstr "Enhetstillverkare"
+
+#. The manufacturer of the profile
+#: ../data/gcm-viewer.ui.h:15
+msgid "Device model"
+msgstr "Enhetsmodell"
+
+#. If the profile contains a display correction table
+#: ../data/gcm-viewer.ui.h:17
+msgid "Display correction"
+msgstr "Skärmkorrigering"
+
+#. The file size in bytes of the profile
+#: ../data/gcm-viewer.ui.h:19
+msgid "File size"
+msgstr "Filstorlek"
+
+#. The basename (the last section of the filename) of the profile
+#: ../data/gcm-viewer.ui.h:21
+msgid "Filename"
+msgstr "Filnamn"
+
+#: ../data/gcm-viewer.ui.h:22
+msgid "From sRGB"
+msgstr "Från sRGB"
+
+#: ../data/gcm-viewer.ui.h:23
+msgid "Information"
+msgstr "Information"
+
+#. The licence of the profile, normally non-free
+#: ../data/gcm-viewer.ui.h:25
+msgid "License"
+msgstr "Licens"
+
+#: ../data/gcm-viewer.ui.h:26
+msgid "Metadata"
+msgstr "Metadata"
+
+#: ../data/gcm-viewer.ui.h:27
+msgid "Metadata is additional information stored in the profile for programs to use."
+msgstr "Metadata är ytterligare information som lagras i profilen för att användas av program."
+
+#: ../data/gcm-viewer.ui.h:28
+msgid "Named Colors"
+msgstr "Namngivna färger"
+
+#: ../data/gcm-viewer.ui.h:29
+msgid "Named colors are specific colors that are defined in the profile"
+msgstr "Namngivna färger är specifika färger som är definierade i profilen"
+
+#. The type of profile, e.g. display, scanner, etc.
+#: ../data/gcm-viewer.ui.h:31
+msgid "Profile type"
+msgstr "Profilens typ"
+
+#: ../data/gcm-viewer.ui.h:32
+msgid "Remove a profile from the device"
+msgstr "Ta bort en profil från enheten"
+
+#: ../data/gcm-viewer.ui.h:33
+msgid "Response in"
+msgstr "Respons in"
+
+#: ../data/gcm-viewer.ui.h:34
+msgid "Response out"
+msgstr "Respons ut"
+
+#: ../data/gcm-viewer.ui.h:35
+msgid "TRC"
+msgstr "TRC"
+
+#: ../data/gcm-viewer.ui.h:36
+msgid "This 3D hull is what the profile looks like in Lab space"
+msgstr "Detta 3D-hölje är hur profilen ser ut som i Lab-rymd"
+
+#: ../data/gcm-viewer.ui.h:37
+msgid "This shows what an image would look like if opened with the profile"
+msgstr "Detta visar hur en bild skulle se ut om den öppnades med profilen"
+
+#: ../data/gcm-viewer.ui.h:38
+msgid "This shows what an image would look like if saved with the profile"
+msgstr "Detta visar hur en bild skulle se ut om den sparades med profilen"
+
+#: ../data/gcm-viewer.ui.h:39
+msgid "To sRGB"
+msgstr "Till sRGB"
+
+#: ../data/gcm-viewer.ui.h:40
+msgid "VCGT"
+msgstr "VCGT"
+
+#. The version of the profile
+#: ../data/gcm-viewer.ui.h:42
+msgid "Version"
+msgstr "Version"
+
+#: ../data/gcm-viewer.ui.h:43
+msgid "Video card out"
+msgstr "Grafikkortets utgång"
+
+#. The basename (the last section of the filename) of the profile
+#: ../data/gcm-viewer.ui.h:45
+msgid "White point"
+msgstr "Vitpunkt"
+
+#. This is an example image that is saved in sRGB gamut
+#: ../data/gcm-viewer.ui.h:47
+msgid "sRGB example"
+msgstr "sRGB-exempel"
+
+#: ../data/gcm-viewer.ui.h:48
+msgid "x"
+msgstr "x"
+
+#: ../data/gcm-viewer.ui.h:49
+msgid "y"
+msgstr "y"
 
 #: ../src/gcm-calibrate-argyll.c:436
 msgid "Getting default parameters"
@@ -283,8 +440,8 @@ msgstr "Försäkra dig om att mitten på enheten är korrekt justerad mot den ra
 
 #. TRANSLATORS: dialog message, just follow the hardware instructions
 #: ../src/gcm-calibrate-argyll.c:2507
-msgid "If you make a mistake just release the switch and you'll get a chance to try again."
-msgstr "Om du gör fel så släpp bara knapen och du får en chans att försöka igen."
+msgid "If you make a mistake, just release the switch, and you'll get a chance to try again."
+msgstr "Om du gör fel så släpp bara knappen och du får en chans att försöka igen."
 
 #: ../src/gcm-calibrate-argyll.c:2586
 msgid "Printing"
@@ -446,7 +603,7 @@ msgid "The printer has been calibrated successfully."
 msgstr "Skrivaren har kalibrerats."
 
 #: ../src/gcm-calibrate-main.c:775
-msgid "Docments printed from this device will be color managed."
+msgid "Documents printed from this device will be color managed."
 msgstr "Dokument som skrivs ut från denna enhet kommer att färghanteras."
 
 #. TRANSLATORS: this is the final summary
@@ -457,7 +614,7 @@ msgstr "Enheten har kalibrerats."
 #. TRANSLATORS: this is the final summary
 #: ../src/gcm-calibrate-main.c:786
 msgid "To view details about the new profile or to undo the calibration visit the <a href=\"control-center://color\">control center</a>."
-msgstr ""
+msgstr "För att visa detaljer om den nya profilen eller för att ångra kalibreringen, besök <a href=\"control-center://color\">kontrollpanelen</a>."
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:797
@@ -481,9 +638,8 @@ msgstr "Åtgärd"
 
 #. TRANSLATORS: dialog message, preface
 #: ../src/gcm-calibrate-main.c:871
-#, fuzzy
 msgid "Calibration checklist"
-msgstr "Kalibreringsfel"
+msgstr "Kontrollista för kalibrering"
 
 #. TRANSLATORS: this is intro page text
 #: ../src/gcm-calibrate-main.c:878
@@ -706,12 +862,12 @@ msgstr "Välj skärmtyp"
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:1371
 msgid "Choose your display target white point"
-msgstr ""
+msgstr "Välj målvitpunkt för din skärm"
 
 #. TRANSLATORS: this is intro page text
 #: ../src/gcm-calibrate-main.c:1378
 msgid "Most displays should be calibrated to a CIE D65 illuminant for general usage."
-msgstr ""
+msgstr "De flesta skärmar bör kalibreras till CIE D65 för allmän användning."
 
 #: ../src/gcm-calibrate-main.c:1380
 msgid "CIE D50 (Printing and publishing)"
@@ -875,7 +1031,7 @@ msgstr "Copyright ©"
 #. TRANSLATORS: we can make this modal (stay on top of) another window
 #: ../src/gcm-calibrate-main.c:2122
 #: ../src/gcm-picker.c:785
-#: ../src/gcm-viewer.c:1615
+#: ../src/gcm-viewer.c:1645
 msgid "Set the parent window to make this modal"
 msgstr "Ange föräldrafönstret för att skapa denna modal"
 
@@ -1224,31 +1380,27 @@ msgstr "CMY"
 
 #: ../src/gcm-viewer.c:697
 msgid "Standard space"
-msgstr ""
+msgstr "Standardrymd"
 
 #: ../src/gcm-viewer.c:698
 msgid "Display checksum"
-msgstr ""
+msgstr "Skärmens kontrollsumma"
 
 #: ../src/gcm-viewer.c:699
-#, fuzzy
 msgid "Display model"
-msgstr "Skärmenhet"
+msgstr "Skärmens modell"
 
 #: ../src/gcm-viewer.c:700
-#, fuzzy
 msgid "Display serial number"
-msgstr "Serienummer"
+msgstr "Skärmens serienummer"
 
 #: ../src/gcm-viewer.c:701
-#, fuzzy
 msgid "Display PNPID"
-msgstr "Skärm"
+msgstr "Skärmens PNPID"
 
 #: ../src/gcm-viewer.c:702
-#, fuzzy
 msgid "Display vendor"
-msgstr "Skärmenhet"
+msgstr "Skärmens tillverkare"
 
 #: ../src/gcm-viewer.c:703
 msgid "File checksum"
@@ -1256,15 +1408,15 @@ msgstr "Filens kontrollsumma"
 
 #: ../src/gcm-viewer.c:704
 msgid "Framework product"
-msgstr ""
+msgstr "Produkt för ramverk"
 
 #: ../src/gcm-viewer.c:705
 msgid "Framework program"
-msgstr ""
+msgstr "Program för ramverk"
 
 #: ../src/gcm-viewer.c:706
 msgid "Framework version"
-msgstr ""
+msgstr "Version för ramverk"
 
 #: ../src/gcm-viewer.c:707
 msgid "Data source type"
@@ -1272,39 +1424,39 @@ msgstr "Typ av datakälla"
 
 #: ../src/gcm-viewer.c:708
 msgid "Mapping format"
-msgstr ""
+msgstr "Mappningsformat"
 
 #: ../src/gcm-viewer.c:709
 msgid "Mapping qualifier"
-msgstr ""
+msgstr "Mappningskvalificerare"
 
 #. TRANSLATORS: if the device has a VCGT profile
-#: ../src/gcm-viewer.c:929
+#: ../src/gcm-viewer.c:959
 msgid "Yes"
 msgstr "Ja"
 
 #. TRANSLATORS: if the device has a VCGT profile
-#: ../src/gcm-viewer.c:932
+#: ../src/gcm-viewer.c:962
 msgid "No"
 msgstr "Nej"
 
 #. TRANSLATORS: this is the tooltip when the profile can be deleted
-#: ../src/gcm-viewer.c:1044
+#: ../src/gcm-viewer.c:1074
 msgid "Delete this profile"
 msgstr "Ta bort denna profil"
 
 #. TRANSLATORS: this is the tooltip when the profile cannot be deleted
-#: ../src/gcm-viewer.c:1047
+#: ../src/gcm-viewer.c:1077
 msgid "This profile cannot be deleted"
 msgstr "Denna profil kan inte tas bort"
 
 #. TRANSLATORS: show just the one profile, rather than all
-#: ../src/gcm-viewer.c:1618
+#: ../src/gcm-viewer.c:1648
 msgid "Set the specific profile to show"
 msgstr "Ange specifik profil att visa"
 
 #. TRANSLATORS: show just the one filename, rather than all
-#: ../src/gcm-viewer.c:1621
+#: ../src/gcm-viewer.c:1651
 msgid "Set the specific file to show"
 msgstr "Ange specifik fil att visa"
 
@@ -1336,7 +1488,7 @@ msgstr "Lab (D50):"
 #. This refers to the amount of ambient light on the sensor
 #: ../data/gcm-picker.ui.h:14
 msgid "Media whitepoint:"
-msgstr ""
+msgstr "Vitpunkt för media:"
 
 #. These are the values of the chosen color in Red, Green, Blue encoding
 #: ../data/gcm-picker.ui.h:16
@@ -1614,12 +1766,8 @@ msgstr "_Mät"
 #~ msgstr "Korrekturenheter"
 #~ msgid "None"
 #~ msgstr "Ingen"
-#~ msgid "CIE 1931 xy"
-#~ msgstr "CIE 1931 xy"
 #~ msgid "Transfer response curve"
 #~ msgstr "Överföringsresponskurva"
-#~ msgid "Video card gamma table"
-#~ msgstr "Gammatabell för grafikkort"
 #~ msgid "Image preview (from sRGB)"
 #~ msgstr "Bildförhandsvisning (från sRGB)"
 #~ msgid "Image preview (to sRGB)"
@@ -1642,8 +1790,6 @@ msgstr "_Mät"
 #~ msgstr "Profilera lokalt ansluten skrivare"
 #~ msgid "Red:"
 #~ msgstr "Röd:"
-#~ msgid "precision"
-#~ msgstr "precision"
 #~ msgid ""
 #~ "A working space is a default colorspace that is not associated with a "
 #~ "specific device."
@@ -1810,8 +1956,6 @@ msgstr "_Mät"
 #~ msgstr "Vill du att de automatiskt ska installeras?"
 #~ msgid "Cannot calibrate: The measuring instrument is not plugged in"
 #~ msgstr "Kan inte kalibrera: Mätinstrumentet är inte anslutet"
-#~ msgid "More Information"
-#~ msgstr "Mer information"
 #~ msgid "Loading list of devices…"
 #~ msgstr "Läser in enhetslistan..."
 #~ msgid "Relative colormetric"
@@ -1830,8 +1974,6 @@ msgstr "_Mät"
 #~ msgstr "Kontrast:"
 #~ msgid "Create _Profile for Device"
 #~ msgstr "Skapa _profil för enheten"
-#~ msgid "Created:"
-#~ msgstr "Skapad:"
 #~ msgid "Delete the currently selected color profile"
 #~ msgstr "Ta bort den markerade färgprofilen"
 #~ msgid ""
@@ -1842,24 +1984,12 @@ msgstr "_Mät"
 #~ "den att dyka upp i listan"
 #~ msgid "Device"
 #~ msgstr "Enhet"
-#~ msgid "Device manufacturer:"
-#~ msgstr "Enhetstillverkare:"
-#~ msgid "Device model:"
-#~ msgstr "Enhetsmodell:"
-#~ msgid "Display correction:"
-#~ msgstr "Skärmkorrigering:"
-#~ msgid "File size:"
-#~ msgstr "Filstorlek:"
-#~ msgid "Filename:"
-#~ msgstr "Filnamn:"
 #~ msgid "Fine tuning"
 #~ msgstr "Finjustering"
 #~ msgid "Gamma:"
 #~ msgstr "Gamma:"
 #~ msgid "Import an ICC file from another location"
 #~ msgstr "Importera en ICC-fil från en annan plats"
-#~ msgid "License:"
-#~ msgstr "Licens:"
 #~ msgid "Profile Graphs"
 #~ msgstr "Profildiagram"
 #~ msgid "Profiles"
@@ -1887,14 +2017,10 @@ msgstr "_Mät"
 #~ msgstr "_Ställ in profil för färghanterade program"
 #~ msgid "Do full screen correction"
 #~ msgstr "Gör fullständig skärmkalibrering"
-#~ msgid "Add a color profile to be used for this device"
-#~ msgstr "Lägg till en färgprofil att användas för denna enhet"
 #~ msgid "EISA ID:"
 #~ msgstr "EISA ID:"
 #~ msgid "Make the selected profile the default profile"
 #~ msgstr "Gör den markerade profilen till standardprofil"
-#~ msgid "Remove a color profile for this device"
-#~ msgstr "Ta bort en färgprofil för denna enhet"
 
 #, fuzzy
 #~ msgid "Reset the sliders to the default values"
