Updated Latvian translation.

--- a/po/lv.po
+++ b/po/lv.po
@@ -5,11 +5,11 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug."
-"cgi?product=gnome-color-manager&keywords=I18N+L10N\n"
-"POT-Creation-Date: 2011-09-28 19:17+0000\n"
-"PO-Revision-Date: 2011-09-29 23:06+0300\n"
-"Last-Translator: Rūdofls Mazurs <rudolfs.mazurs@gmail.com>\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
+"color-manager&keywords=I18N+L10N\n"
+"POT-Creation-Date: 2011-10-03 07:54+0000\n"
+"PO-Revision-Date: 2011-10-04 14:57+0300\n"
+"Last-Translator: Rūdolfs Mazurs <rudolfs.mazurs@gmail.com>\n"
 "Language-Team: Latvian <lata-l10n@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -223,8 +223,8 @@ msgid ""
 "This pre-calibrates the screen by sending colored and gray patches to your "
 "screen and measuring them with the hardware device."
 msgstr ""
-"Šis prekalibrē ekrānu, sūtot krāsu un pelēktoņu ielāpus uz jūsu ekrānu "
-"un mēra tos ar aparatūras ierīci."
+"Šis prekalibrē ekrānu, sūtot krāsu un pelēktoņu ielāpus uz jūsu ekrānu un "
+"mēra tos ar aparatūras ierīci."
 
 #: ../src/gcm-calibrate-argyll.c:527
 msgid "Reading the patches"
@@ -364,8 +364,8 @@ msgstr "Lūdzu, iestatiet mērinstrumentu uz kalibrēšanas režīmu."
 msgid ""
 "Please set the measuring instrument to screen mode like the image below."
 msgstr ""
-"Lūdzu, iestatiet mērinstrumentu uz ekrāna režīmu, tā, kā redzams "
-"attēlā zemāk."
+"Lūdzu, iestatiet mērinstrumentu uz ekrāna režīmu, tā, kā redzams attēlā "
+"zemāk."
 
 #: ../src/gcm-calibrate-argyll.c:2228
 msgid "Please set the measuring instrument to screen mode."
@@ -393,24 +393,24 @@ msgid ""
 "The pattern match wasn't good enough. Ensure you have the correct type of "
 "target selected."
 msgstr ""
-"Raksta atbilstība nebija pietiekami laba. Pārliecinieties, ka esat izvēlējies "
-"pareizu mērķa tipu."
+"Raksta atbilstība nebija pietiekami laba. Pārliecinieties, ka esat "
+"izvēlējies pareizu mērķa tipu."
 
 #: ../src/gcm-calibrate-argyll.c:2369
 msgid ""
 "The measuring instrument got no valid readings. Please ensure the aperture "
 "is fully open."
 msgstr ""
-"Mērinstruments nesaņēma derīgus lasījumus. Pārliecinieties, ka diafragma "
-"ir pilnībā atvērta."
+"Mērinstruments nesaņēma derīgus lasījumus. Pārliecinieties, ka diafragma ir "
+"pilnībā atvērta."
 
 #: ../src/gcm-calibrate-argyll.c:2373
 msgid ""
 "The measuring instrument is busy and is not starting up. Please remove the "
 "USB plug and re-insert before trying to use this device."
 msgstr ""
-"Mērinstruments ir aizņemts un nestartējas. Lūdzu, izņemiet USB vadu un "
-"atkal pievienojiet, pirms atkārtoti mēģināt lietot šo ierīci."
+"Mērinstruments ir aizņemts un nestartējas. Lūdzu, izņemiet USB vadu un atkal "
+"pievienojiet, pirms atkārtoti mēģināt lietot šo ierīci."
 
 #: ../src/gcm-calibrate-argyll.c:2409
 msgid "Reading target"
@@ -670,8 +670,8 @@ msgid ""
 "To view details about the new profile or to undo the calibration visit the "
 "<a href=\"control-center://color\">control center</a>."
 msgstr ""
-"Lai skatītu datus par jauno profilu vai lai atsauktu kalibrēšanu, apmeklējiet"
-"<a href=\"control-center://color\">vadības centru</a>."
+"Lai skatītu datus par jauno profilu vai lai atsauktu kalibrēšanu, "
+"apmeklējiet<a href=\"control-center://color\">vadības centru</a>."
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:797 ../src/gcm-calibrate-main.c:1766
@@ -712,8 +712,8 @@ msgid ""
 "You may want to consult the owner's manual for your display on how to "
 "achieve these settings."
 msgstr ""
-"Jūs varētu vēlaties izlasīt sava displeja īpašnieka rokasgrāmatu par to, "
-"kā sasniegt šādus iestatījumus."
+"Jūs varētu vēlaties izlasīt sava displeja īpašnieka rokasgrāmatu par to, kā "
+"sasniegt šādus iestatījumus."
 
 #. TRANSLATORS: dialog message, bullet item
 #: ../src/gcm-calibrate-main.c:884
@@ -731,8 +731,8 @@ msgid ""
 "Configure your display with custom color settings and ensure the RGB "
 "channels are set to the same values."
 msgstr ""
-"Konfigurējiet displeju ar pielāgotiem krāsu iestatījumiem un pārliecinieties, "
-"ka RGB kanāli ir iestatīti ar tādām pašām vērtībām."
+"Konfigurējiet displeju ar pielāgotiem krāsu iestatījumiem un "
+"pārliecinieties, ka RGB kanāli ir iestatīti ar tādām pašām vērtībām."
 
 #. TRANSLATORS: dialog message, addition to bullet item
 #: ../src/gcm-calibrate-main.c:893
@@ -902,8 +902,8 @@ msgid ""
 "Ensure that the white-balance has not been modified by the camera and that "
 "the lens is clean."
 msgstr ""
-"Pārliecinieties, ka kamera nav mainījusi baltās krāsas balansu un ka lēca "
-"ir tīra."
+"Pārliecinieties, ka kamera nav mainījusi baltās krāsas balansu un ka lēca ir "
+"tīra."
 
 #. TRANSLATORS: this is the message body for the chart selection
 #: ../src/gcm-calibrate-main.c:1211
@@ -1023,8 +1023,8 @@ msgid ""
 "A higher precision profile provides higher accuracy in color matching but "
 "requires more time for reading the color patches."
 msgstr ""
-"Augstākas precizitātes profils piedāvā augstāku precizitāti krāsu atbilstībā, "
-"bet prasa vairāk laika krāsu ielāpu nolasīšanai."
+"Augstākas precizitātes profils piedāvā augstāku precizitāti krāsu "
+"atbilstībā, bet prasa vairāk laika krāsu ielāpu nolasīšanai."
 
 #. TRANSLATORS: this is the message body for the chart selection
 #: ../src/gcm-calibrate-main.c:1562
@@ -1354,7 +1354,7 @@ msgstr "Trūkst apraksta"
 #. TRANSLATORS: this is the profile creation date strftime format
 #: ../src/gcm-profile.c:583
 msgid "%B %e %Y, %I:%M:%S %p"
-msgstr "%e %B %Y, %I:%M:%S %p"
+msgstr "%e. %B, %Y., %H:%M:%S"
 
 #. TRANSLATORS: this is the colorspace, e.g. red, green, blue
 #. TRANSLATORS: this the ICC colorspace type
