Updated Spanish translation

--- a/po/es.po
+++ b/po/es.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: gnome-color-manager.master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager&keywords=I18N+L10N\n"
-"POT-Creation-Date: 2011-12-19 16:02+0000\n"
-"PO-Revision-Date: 2011-12-27 12:17+0100\n"
+"POT-Creation-Date: 2011-12-27 11:20+0000\n"
+"PO-Revision-Date: 2011-12-27 13:54+0100\n"
 "Last-Translator: Daniel Mustieles <daniel.mustieles@gmail.com>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -116,8 +116,8 @@ msgid ""
 "A tone reproduction curve is the mapping of scene luminance to display "
 "luminance"
 msgstr ""
-"Una curva de reproducción tonal es el mapeo de la luminosidad de la escena a "
-"la luminosidad del monitor"
+"Una curva de reproducción tonal es el mapeo de la luminancia de la escena a "
+"la luminancia del monitor"
 
 #: ../data/gcm-viewer.ui.h:4
 msgid "A video card gamma table shows the curves loaded into the display"
@@ -632,7 +632,6 @@ msgstr "Abrir"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-calibrate-helper.c:87
-#| msgid "Import device color profile?"
 msgid "Use this device for profiling"
 msgstr "Usar este dispositivo para crear el perfil"
 
@@ -976,9 +975,6 @@ msgstr ""
 
 #. TRANSLATORS: dialog message, preface
 #: ../src/gcm-calibrate-main.c:1113
-#| msgid ""
-#| "Ensure that the contrast and brightness are not changed and color "
-#| "correction profiles are not applied."
 msgid ""
 "Ensure that the contrast and brightness are not changed and color correction "
 "profiles have not been applied."
@@ -1006,7 +1002,6 @@ msgstr ""
 
 #. TRANSLATORS: this is the message body for the chart selection
 #: ../src/gcm-calibrate-main.c:1126
-#| msgid "Please select a calibration target"
 msgid "Please select the calibration target type."
 msgstr "Seleccione el tipo de objetivo de la calibración."
 
@@ -1200,7 +1195,6 @@ msgstr "Debe insertar un sensor hardware para continuar."
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1646
-#| msgid "Color Checker"
 msgid "Sensor Check"
 msgstr "Verificar el sensor"
 
