--- a/po/es.po
+++ b/po/es.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: gnome-color-manager.master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager&keywords=I18N+L10N\n"
-"POT-Creation-Date: 2011-11-13 17:12+0000\n"
-"PO-Revision-Date: 2011-12-27 12:17+0100\n"
+"POT-Creation-Date: 2011-12-27 11:40+0000\n"
+"PO-Revision-Date: 2011-12-27 13:55+0100\n"
 "Last-Translator: Daniel Mustieles <daniel.mustieles@gmail.com>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -66,8 +66,8 @@ msgid ""
 "A tone reproduction curve is the mapping of scene luminance to display "
 "luminance"
 msgstr ""
-"Una curva de reproducción tonal es el mapeo de la luminosidad de la escena a "
-"la luminosidad del monitor"
+"Una curva de reproducción tonal es el mapeo de la luminancia de la escena a "
+"la luminancia del monitor"
 
 #: ../data/gcm-viewer.ui.h:4
 msgid "A video card gamma table shows the curves loaded into the display"
