--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,17 @@
+Version 3.2.2
+~~~~~~~~~~~~~
+Released: 2011-01-09
+
+* Translations
+ - Add Esperanto translation (Kristjan SCHMIDT)
+ - Updated Czech translation (Milan Knížek)
+ - Updated Korean translation (Seong-ho, Cho)
+ - Updated Spanish translation (Nicolás Satragno)
+
+* Bugfix:
+ - Actually enable the non-display calibrate codepath (Richard Hughes)
+ - Set the reference kind when calibrating a camera device (Richard Hughes)
+
 Version 3.2.1
 ~~~~~~~~~~~~~
 Released: 2011-10-17
