--- a/help/ja/ja.po
+++ b/help/ja/ja.po
@@ -7,9 +7,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager master\n"
 "POT-Creation-Date: 2010-07-25 17:30+0900\n"
-"PO-Revision-Date: 2010-07-25 17:40+0900\n"
-"Last-Translator: Ryo Fujita <rfujita@redhat.com>\n"
-"Language-Team: Japanese <rfujita@redhat.com>\n"
+"PO-Revision-Date: 2012-01-22 11:07+0900\n"
+"Last-Translator: Akihiro Nishimura <nimu.zh3@zoho.com>\n"
+"Language-Team: Japanese <gnome-translation@gnome.gr.jp>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -388,8 +388,8 @@ msgid ""
 "guisubmenu><guimenuitem>show-fine-tuning</guimenuitem></menuchoice>)."
 msgstr ""
 "微調整のオプションは、GConfで有効に設定した場合に利用可能です "
-"( <menuchoice><guimenu>アプリケーション</guimenu><guisubmenu>カラープロファイ"
-"ル</guisubmenu><guimenuitem>微調整を表示</guimenuitem></menuchoice>)。"
+"( <menuchoice><guimenu>apps</guimenu><guisubmenu>gnome-color-manager</"
+"guisubmenu><guimenuitem>show-fine-tuning</guimenuitem></menuchoice>)。"
 
 #: C/gnome-color-manager.xml:311(para)
 msgid ""
